# GodBot

./: .gitignore  GodBot-0.0.2-py3-none-any.whl  GodBot.py  README.md  data.json  pyproject.toml  setup.cfg  start_bot.py
Ansible/: inventory  playbook.yml
src/: .env  GodBot.py
src/GodBot/: GodBot.py  check_condition.py  exceptions.py  god_bot.py  grammar_maker.py  handle_message.py  handle_rpg.py  handle_rpg_commands.py  parser_functions.py  parser_grammars.py  parser_visitor.py  player_class.py  postgresql.py  rpg_exceptions.py  rpg_functions.py  ship_class.py  when_class.py
src/GodBot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/GodBot/.mypy_cache/3.8/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  check_condition.data.json  check_condition.meta.json  codecs.meta.json  enum.meta.json  io.meta.json  mmap.meta.json  parser_functions.data.json  parser_functions.meta.json  pathlib.meta.json  posix.meta.json  re.meta.json  sys.meta.json  types.meta.json  typing.meta.json
src/GodBot/.mypy_cache/3.8/collections/: __init__.meta.json  abc.meta.json
src/GodBot/.mypy_cache/3.8/importlib/: __init__.meta.json  abc.meta.json
src/GodBot/.mypy_cache/3.8/json/: __init__.meta.json  decoder.meta.json  encoder.meta.json
src/GodBot/.mypy_cache/3.8/os/: __init__.meta.json  path.meta.json
src/GodBot_Shirah.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_parser.py  test_rpg.py  test_when.py
