[metadata]
name = GodBot
version = 0.0.2
author = Shirah
author_email = Shirakawa@live.fr
description = The best discord bot ever made
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/Shirakawa42/GodBot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
